html-syntax notes

--- a/html-syntax/index.html
+++ b/html-syntax/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" />
+  <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/006.png" alt="Charizard" />
   <h1>Charizard</h1>
   <p> &copy;Pokémon. &reg;Nintendo. </p>
 </body>
