changes in css-pseudo-classes

--- a/css-pseudo-classes/index.html
+++ b/css-pseudo-classes/index.html
@@ -7,10 +7,13 @@
 </head>
 
 <body>
-  <h2> Hover Button</h2>
-  <button name="button">I'm a button!</button>
+  <section>
+    <h2> Hover Button</h2>
+    <button class="custom-button">I&apos;m a button!</button>
+  </section>
   <h2>Striped Table</h2>
-  <table>
+
+  <table class="striped">
     <thead>
       <tr>
         <th>Student Name</th>
