css-brochure-form - shawn notes

--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -22,10 +22,10 @@
           <input name="email" type="email" id="email-address" placeholder="sally@company.co">
         </div>
   </div>
-  <div id="your-name">
+  <div>
     <label for="your-name">NAME</label>
     <div id="4">
-      <input name="name" type="text" placeholder="Sally Smith">
+      <input name="name" type="text" id="your-name" placeholder="Sally Smith">
     </div>
   </div>
 
