--- a/css-media-queries/meta-viewport.html
+++ b/css-media-queries/meta-viewport.html
@@ -21,6 +21,11 @@
       height: 200px;
       background-color: blue;
     }
+    @media screen and (min-width: 568px) {
+      .box {
+        background-color: red;
+      }
+    }
 
   </style>
 </head>
